# ticket-rush

./: .gitignore  README.md  docker-compose.yml  requirement.md  ticketrush_implementation.plan.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 412d37fcef66_initial_schema_users_venues.py  49263eb7cb0b_add_user_avatar_and_event_images.py  589114225e39_master_grid_event_grid_dims_seat_event_.py  5e0531ce052a_add_event_category.py  8b5cc0e615cd_add_events_zones_seats.py  a1b2c3d4e5f6_add_max_tickets_per_user_to_events.py  b22a70f9426c_add_bookings_payments_tickets.py  c9f5e68d6b2a_move_grid_dims_to_venues.py
backend/app/: config.py  database.py  main.py  redis.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  base.py  booking.py  event.py  event_image.py  payment.py  seat.py  ticket.py  user.py  venue.py  zone.py
backend/app/routers/: auth.py  bookings.py  dashboard.py  events.py  payments.py  queue.py  seats.py  tickets.py  uploads.py  users.py  venues.py  zones.py
backend/app/scheduler/: queue_grant_job.py  seat_release_job.py  session_expire_job.py  setup.py
backend/app/schemas/: auth.py  booking.py  dashboard.py  event.py  pagination.py  queue.py  seat.py  venue.py  zone.py
backend/app/services/: auth_service.py  booking_service.py  dashboard_service.py  event_service.py  payment_service.py  queue_service.py  seat_layout_service.py  seat_service.py  ticket_service.py  upload_service.py  user_service.py  (+2 more)
backend/scripts/: seed_admin.py  seed_demo.py
backend/uploads/: .gitkeep
(+63 files in other folders)
